Bug 48359 - Java's notepad shows wrong icons right after startup with xrender backend [SNA]
Summary: Java's notepad shows wrong icons right after startup with xrender backend [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-05 17:15 UTC by Clemens Eisserer
Modified: 2012-04-06 06:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
demo application (36.50 KB, application/x-java-archive)
2012-04-05 17:15 UTC, Clemens Eisserer
no flags Details
screenshot of notepad window right after startup (11.84 KB, image/png)
2012-04-05 17:16 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2012-04-05 17:15:02 UTC
Created attachment 59553 [details]
demo application

When starting Java's notepad demo application with the xrender backend enabled, it very frequently (about 80%) renderes the same icon for all toolbar entries.
At the second refresh (mouse hoover effect, window resizing) the correct icons are drawn.

This only happens with SNA enabled, using UXA the application pops up as expected.

Simply start the attached demo application with the following command line (java 7 is required):
java -Dsun.java2d.xrender=True -jar Notepad.jar
Comment 1 Clemens Eisserer 2012-04-05 17:16:15 UTC
Created attachment 59554 [details]
screenshot of notepad window right after startup
Comment 2 Clemens Eisserer 2012-04-05 17:19:46 UTC
Forgot to mention, this happens on my i945GM based Laptop running Fedora16+updates.
Comment 3 Chris Wilson 2012-04-06 06:14:00 UTC
Narrowed it down to overwriting the cached (temporary) upload buffer, but I haven't yet spotted how that can be.
Comment 4 Chris Wilson 2012-04-06 06:23:29 UTC
commit 42a84613e34522af885b4b50d6c68ef77e81ffc3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Apr 6 14:27:15 2012 +0100

    sna: Relase the upload cache when overwriting with PutImage
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48359
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.